VTK - bug in production (missing border and vertical align in about and permissions tables caused by syntax error)

--- a/src/main/resources/web/themes/default/default.css
+++ b/src/main/resources/web/themes/default/default.css
@@ -2539,7 +2539,7 @@ table.privilegeTable {
 table.resourceInfo td,
 table.privilegeTable td {
   padding: 3px 5px;
-  border-top: 1px solid #F0F0F0
+  border-top: 1px solid #F0F0F0;
   vertical-align: top;
 }
 
